# rupersonaagent

./: .gitignore  .gitlab-ci.yml  .pypirc  README.en.md  README.md  pyproject.toml  requirements.yml  setup.py
FiD_dialogue/: README.md  fidagent.py  reader_train.py  requirements.txt  test_reader.py  train_reader.py
RAG_LLM_dialogue/: ReadMe.md  chat_bot.py  data_storage.py  demo.py  query_document.py  relevant_doc.py  requirements.txt
custom_datasets/: english_team_management.json  knowledge.txt  russian_nlp.json
datasets/: english_nlp.json
emo_classifier/: config.yml  lightning_data_module.py  lightning_module.py  main.py
emotion_recognition/: lightning_data_module.py  lightning_module.py  main.py
generative_model/: data_module.py  model.py
hate_speech/: README.md  __init__.py  bert.py  bert_module.py  data_module.py  ddp_bert.py  ddp_ngram_attention.py  finetune_bert.ipynb  fusion.ipynb  fusion.py  ngram_attention.py  ngram_attention_model.py  ngramattention.py  requirements.txt  train_bert.py  train_ddp_ngram_attention.py  train_ngram_attention.py
inference_optimization/: benchmark.ipynb  convert_to_lightseq.py
internet_memory_model/: fid.py  in_dataset.py  in_model.py  inference.py  test_internet_model.py  train_internet_model.py  utils.py
knowledge_distillation/: chat.py  evaluation.py  generate_knowledge.py  train.py
personification/: concept_set_framework.py  interactive.py  train_cosplay_in_supervised.py
rule_based_infor ‎mation_extraction/: ling_rules.py  write_json_with_ling_gk.py
speech_extraction/: SpeechCharacteristic.py  (+1 more)
(+45 files in other folders)
