[tool.poetry]
name = "rupersonaagent"
version = "0.1.0"
description = "library for creating a Russian-language dialog assistant"
authors = ["Your Name <you@example.com>"]
license = "MIT Licence"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
